<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.apress.bgn</groupId>
    <artifactId>java-23-for-absolute-beginners</artifactId>
    <version>${revision}</version> <!-- read from .mvn/maven.config -->
    <packaging>pom</packaging> <!-- this is specific to the parent pom.xml -->

    <name>Java for Absolute Beginners, 3nd edition</name>
    <description> This project is designed to gradually introduce you to the
        Java language syntax and the proper way to design solutions using it.
        The syntax used contains elements from the beginning to version 23 of Java.</description>
    <url>https://www.apress.com/gp/book/9781484270790</url> <!-- TODO change this -->

    <modules>
        <module>chapter00</module>
        <module>chapter01</module>
        <module>chapter02</module>
        <module>chapter03</module>
        <module>chapter04</module>
        <module>chapter05</module>
        <module>chapter06</module>
        <module>chapter07</module>
        <module>chapter08</module>
        <module>chapter09</module>
        <module>chapter10</module>
        <module>chapter11</module>
        <module>chapter12</module>
        <module>chapter13</module>
    </modules>

    <properties>
        <revision>1.0-SNAPSHOT</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <log4j.version>3.0.0-beta2</log4j.version>
        <mysql.driver.version>8.4.0</mysql.driver.version>

        <java.version>23</java.version>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
    </properties>

    <build>
        <defaultGoal>clean install</defaultGoal> <!-- TODO change this to clean site at the right moment -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <!-- TODO remove this maybe, after 23 release -->
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <developers>
        <developer>
            <name>Iuliana Cosmina</name>
            <organization>Cloudsoft</organization>
            <roles>
                <role>Judge</role>
                <role>Jury</role>
                <role>Executioner</role>
            </roles>
            <email>Iuliana.Cosmina@gmail.com</email>
        </developer>
    </developers>

    <distributionManagement>
        <site>
            <id>${project.artifactId}</id>
            <url>https://link.springer.com/book/10.1007/978-1-4842-7080-6</url>
        </site>
    </distributionManagement>

</project>